DATABASE ER I AZURE

--- a/GraduationProject/appsettings.json
+++ b/GraduationProject/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BeverageDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }
- 
+  "ConnectionStrings": {
+    "AZURE_SQL_CONNECTIONSTRING": "Data Source=grad-beverage.database.windows.net;Initial Catalog=beverage-db;Authentication=Active Directory Default; Encrypt=True;"
+  }
+
 }
