--- a/GraduationProject/appsettings.json
+++ b/GraduationProject/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AZURE_SQL_CONNECTIONSTRING": "Data Source=grad-beverage.database.windows.net;Initial Catalog=beverage-db;Trusted_Connection=False;MultipleActiveResultSets=true;User ID=beverageadmin;Password=SecretBeverage1;Encrypt=True;"
+    //"AZURE_SQL_CONNECTIONSTRING": "Data Source=grad-beverage.database.windows.net;Initial Catalog=beverage-db;Trusted_Connection=False;MultipleActiveResultSets=true;User ID=beverageadmin;Password=SecretBeverage1;Encrypt=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BeverageDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 
 }
