Fixed the connection with the IDP and some small errors in the createdrink, drink_page, favourites_page, login_page and main_page.

--- a/FrontendBffProject/appsettings.json
+++ b/FrontendBffProject/appsettings.json
@@ -2,8 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "Oidc": {
@@ -19,18 +18,31 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
-      "api1": {
-        "ClusterId": "api1",
+      "spa": {
+        "ClusterId": "spa",
+        "Match": {
+          "Path": "/{*any}"
+        }
+      },
+      "api": {
+        "ClusterId": "api",
         "Match": {
           "Path": "/api/{*any}"
         }
       }
     },
     "Clusters": {
-      "api1": {
+      "spa": {
         "Destinations": {
-          "api1": {
-            "Address": "http://localhost:8080/"
+          "spa": {
+            "Address": "http://localhost:4200/"
+          }
+        }
+      },
+      "api": {
+        "Destinations": {
+          "api": {
+            "Address": "https://localhost:8080/"
           }
         }
       }
