--- a/Sipster.IDP/Sipster.IDP.csproj
+++ b/Sipster.IDP/Sipster.IDP.csproj
@@ -8,6 +8,8 @@
 	<ItemGroup>
 		<PackageReference Include="Duende.IdentityServer" Version="6.3.2" />
 		<PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.3.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.19" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.19" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.18" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.18" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.18" />
